Fixed list alignment

--- a/src/components/pokemon-list.module.scss
+++ b/src/components/pokemon-list.module.scss
@@ -3,7 +3,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   gap: 2em;
-  justify-content: space-between;
+  justify-content: center;
 
   .wrapper {
     display: flex;
